[gd_scene load_steps=43 format=3 uid="uid://c7sg24y01v6xn"]

[ext_resource type="Script" uid="uid://dmuifn515spf3" path="res://Scripts/World/world.gd" id="1_gfmxp"]
[ext_resource type="Script" uid="uid://bucal3fjmyf2p" path="res://Scripts/World/main_scene.gd" id="1_p1ykx"]
[ext_resource type="Texture2D" uid="uid://cuuqwwq6uxwib" path="res://Asset/Background/sky 128x112.png" id="2_1n88h"]
[ext_resource type="Texture2D" uid="uid://dng17xpkjb274" path="res://Asset/Background/city 2 128x112.png" id="3_opjno"]
[ext_resource type="Texture2D" uid="uid://dagldaom3kqcv" path="res://Asset/Background/city 1 128x112.png" id="4_meb7l"]
[ext_resource type="Texture2D" uid="uid://dl35sbrqe71ft" path="res://Asset/Background/ground 128x112.png" id="5_w30ff"]
[ext_resource type="PackedScene" uid="uid://17x4vh1ltwl" path="res://Scenes/base_body.tscn" id="6_xy6fp"]
[ext_resource type="FontFile" uid="uid://dy00p4wwvsw10" path="res://Resources/Theme/Pixelbasel.ttf" id="7_uws2o"]
[ext_resource type="LabelSettings" uid="uid://bqa25qssvogie" path="res://Resources/Theme/LableDefault.tres" id="8_iylel"]
[ext_resource type="Script" uid="uid://bvdbux3pwo2ea" path="res://Scripts/GUI/hunger_label.gd" id="9_yj5sn"]
[ext_resource type="Script" uid="uid://befl1oxcgetrb" path="res://Scripts/GUI/hygiene_label.gd" id="10_jtbqm"]
[ext_resource type="Theme" uid="uid://d0h6wtc7n12qn" path="res://Resources/Theme/Default1.tres" id="11_ek5vw"]
[ext_resource type="Script" uid="uid://dx617k7gbrj0e" path="res://Scripts/GUI/happy_meter.gd" id="12_jip8q"]
[ext_resource type="LabelSettings" uid="uid://eyxuy6ksvpxe" path="res://Resources/Progress.tres" id="13_euc68"]
[ext_resource type="PackedScene" uid="uid://ce77p7t6uoopb" path="res://Scenes/sfx.tscn" id="14_38t8r"]
[ext_resource type="AudioStream" uid="uid://dlrt8glkw04fl" path="res://Asset/OGG/Munch 1.ogg" id="15_jef5d"]
[ext_resource type="Script" uid="uid://c7p5d2curjbru" path="res://Scripts/World/Audio/gui.gd" id="16_q1yuq"]
[ext_resource type="Script" uid="uid://bjjmmm8sbhyql" path="res://Scripts/GUI/feed_button.gd" id="17_uacds"]
[ext_resource type="LabelSettings" uid="uid://msy0fiwp5nok" path="res://Resources/Theme/Title.tres" id="18_y0lqw"]
[ext_resource type="Script" uid="uid://s28v3bjq816l" path="res://Scripts/GUI/clean_button.gd" id="19_c5xsv"]
[ext_resource type="Script" uid="uid://bigblpkgj3c57" path="res://Scripts/GUI/play.gd" id="20_84x1k"]
[ext_resource type="Script" uid="uid://r2pw83qjplan" path="res://Scripts/GUI/menu_button.gd" id="21_0hwxg"]
[ext_resource type="Script" uid="uid://d1va3882oldxv" path="res://Scripts/World/Audio/button_sfx.gd" id="22_si2mt"]
[ext_resource type="AudioStream" uid="uid://bk8cnhuxj1a3l" path="res://Asset/OGG/Blip.ogg" id="23_sp30j"]
[ext_resource type="AudioStream" uid="uid://bpmc66h1av61w" path="res://Asset/OGG/Roar.ogg" id="24_7tmle"]
[ext_resource type="AudioStream" uid="uid://b751b0lwt7eo3" path="res://Asset/OGG/Baby (1).ogg" id="25_ya33n"]
[ext_resource type="AudioStream" uid="uid://b46uqp2vd800g" path="res://Asset/OGG/Flap.ogg" id="26_3wiol"]
[ext_resource type="Texture2D" uid="uid://e86vjhm6y8d4" path="res://Asset/Background/Titlebackground 128x112.png" id="28_clqk1"]
[ext_resource type="FontFile" uid="uid://cm6si4x8qv85y" path="res://Resources/Theme/PixelAE-Bold.ttf" id="29_fxe4o"]
[ext_resource type="Texture2D" uid="uid://ifjnwpmqlmip" path="res://Asset/UI/button.png" id="30_8quq7"]
[ext_resource type="Script" uid="uid://bihoilcsmpvcj" path="res://Scripts/GUI/menu_screen.gd" id="31_vhc7d"]
[ext_resource type="Theme" uid="uid://bkshl5opa74id" path="res://Resources/Theme/sound_menu.tres" id="32_bqoel"]
[ext_resource type="Script" uid="uid://icjildfw6ey4" path="res://Scripts/World/Audio/sound_menu.gd" id="33_id12a"]
[ext_resource type="Script" uid="uid://c04fjhblcb2a1" path="res://Scripts/count.gd" id="34_kghrr"]
[ext_resource type="Script" uid="uid://bubnhlufbh85r" path="res://Scripts/GUI/gui_sfx.gd" id="34_rs42p"]
[ext_resource type="PackedScene" uid="uid://cn5g4gwpxhc7b" path="res://Scenes/bgm.tscn" id="35_5qxgh"]
[ext_resource type="Script" uid="uid://cy630ouleptci" path="res://Scripts/player_message.gd" id="36_qfgnl"]
[ext_resource type="Script" uid="uid://bsciqt4hwqs5x" path="res://Scripts/pet_button.gd" id="39_mvmce"]

[sub_resource type="Theme" id="Theme_cl5ej"]
default_font = ExtResource("7_uws2o")
Label/colors/font_color = Color(0, 0.234705, 5.88158e-05, 1)
Label/font_sizes/font_size = 18
Label/fonts/font = ExtResource("7_uws2o")

[sub_resource type="LabelSettings" id="LabelSettings_qfgnl"]
font = ExtResource("29_fxe4o")
font_size = 26
font_color = Color(0.592157, 0.701961, 0.305882, 1)
outline_size = 11
outline_color = Color(0.227882, 0.247012, 1.20327e-07, 1)
shadow_size = 18
shadow_color = Color(0.12549, 0.137255, 0, 0.858824)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_umu00"]

[sub_resource type="ImageTexture" id="ImageTexture_mvmce"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_p1ykx")

[node name="MainDisplayLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="MainDisplayContainer" type="Control" parent="MainDisplayLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="WorldManager" type="PanelContainer" parent="MainDisplayLayer/MainDisplayContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_gfmxp")

[node name="Control" type="Control" parent="MainDisplayLayer/MainDisplayContainer/WorldManager"]
layout_mode = 2

[node name="Background" type="Control" parent="MainDisplayLayer/MainDisplayContainer/WorldManager"]
layout_mode = 2

[node name="COLOR" type="TextureRect" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/Background"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 448.0
texture = ExtResource("2_1n88h")

[node name="City2128x112" type="Sprite2D" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/Background"]
position = Vector2(256, 224)
scale = Vector2(4, 4)
texture = ExtResource("3_opjno")

[node name="City1128x112" type="Sprite2D" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/Background"]
position = Vector2(256, 224)
scale = Vector2(4, 4)
texture = ExtResource("4_meb7l")

[node name="Ground128x112" type="Sprite2D" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/Background"]
position = Vector2(256, 224)
scale = Vector2(4, 4)
texture = ExtResource("5_w30ff")

[node name="PetLayer" type="CanvasLayer" parent="MainDisplayLayer/MainDisplayContainer/WorldManager"]

[node name="PetBody" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/PetLayer" instance=ExtResource("6_xy6fp")]
unique_name_in_owner = true
position = Vector2(256, 304)

[node name="CookieContainer" type="Node2D" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/PetLayer"]
unique_name_in_owner = true
position = Vector2(360, 304)

[node name="PoopContainer" type="Node2D" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/PetLayer"]
unique_name_in_owner = true
position = Vector2(152, 320)

[node name="InfoDisplay" type="Control" parent="MainDisplayLayer/MainDisplayContainer/WorldManager"]
layout_mode = 2

[node name="Row" type="VBoxContainer" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 65.0
grow_horizontal = 2

[node name="Colomn1" type="HBoxContainer" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay/Row"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="HungerLabel" type="Label" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay/Row/Colomn1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = SubResource("Theme_cl5ej")
text = "Info Display"
label_settings = ExtResource("8_iylel")
horizontal_alignment = 1
script = ExtResource("9_yj5sn")

[node name="HygieneLabel" type="Label" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay/Row/Colomn1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource("Theme_cl5ej")
text = "Info Display"
label_settings = ExtResource("8_iylel")
horizontal_alignment = 1
script = ExtResource("10_jtbqm")

[node name="HappyLabel" type="Label" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay/Row/Colomn1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("11_ek5vw")
text = "Info Display"
label_settings = ExtResource("8_iylel")
horizontal_alignment = 1
script = ExtResource("12_jip8q")

[node name="Colomn2" type="HBoxContainer" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay/Row"]
layout_mode = 2
size_flags_vertical = 3

[node name="HungerProgressBar" type="ProgressBar" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay/Row/Colomn2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("11_ek5vw")
max_value = 1.0
show_percentage = false

[node name="HungerProgressLabel" type="Label" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay/Row/Colomn2/HungerProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -10.5
offset_right = 4.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = ExtResource("13_euc68")

[node name="HygieneProgressBar" type="ProgressBar" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay/Row/Colomn2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("11_ek5vw")
max_value = 1.0
show_percentage = false

[node name="HygieneProgressLabel" type="Label" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay/Row/Colomn2/HygieneProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -10.5
offset_right = 33.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = ExtResource("13_euc68")

[node name="HappyProgressBar" type="ProgressBar" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay/Row/Colomn2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("11_ek5vw")
max_value = 1.0
show_percentage = false

[node name="HappyProgressLabel" type="Label" parent="MainDisplayLayer/MainDisplayContainer/WorldManager/InfoDisplay/Row/Colomn2/HappyProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -10.5
offset_right = 33.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = ExtResource("13_euc68")

[node name="SFX" parent="MainDisplayLayer/MainDisplayContainer/WorldManager" instance=ExtResource("14_38t8r")]
stream = ExtResource("15_jef5d")

[node name="GUI" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource("16_q1yuq")

[node name="PlayerButtons" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="X" type="VBoxContainer" parent="GUI/PlayerButtons"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.52

[node name="Y" type="HBoxContainer" parent="GUI/PlayerButtons/X"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="FEED" type="Button" parent="GUI/PlayerButtons/X/Y"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("11_ek5vw")
action_mode = 0
icon_alignment = 1
script = ExtResource("17_uacds")

[node name="Label" type="Label" parent="GUI/PlayerButtons/X/Y/FEED"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -22.5
offset_right = 41.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "FEED"
label_settings = ExtResource("18_y0lqw")

[node name="CLEAN" type="Button" parent="GUI/PlayerButtons/X/Y"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("11_ek5vw")
action_mode = 0
script = ExtResource("19_c5xsv")

[node name="Label" type="Label" parent="GUI/PlayerButtons/X/Y/CLEAN"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -22.5
offset_right = 54.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "CLEAN"
label_settings = ExtResource("18_y0lqw")

[node name="PLAY" type="Button" parent="GUI/PlayerButtons/X/Y"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("11_ek5vw")
action_mode = 0
icon_alignment = 1
expand_icon = true
script = ExtResource("20_84x1k")

[node name="Label" type="Label" parent="GUI/PlayerButtons/X/Y/PLAY"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -22.5
offset_right = 42.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"
label_settings = ExtResource("18_y0lqw")

[node name="MENU" type="Button" parent="GUI/PlayerButtons/X/Y"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("11_ek5vw")
action_mode = 0
expand_icon = true
text_direction = 2
script = ExtResource("21_0hwxg")

[node name="Label" type="Label" parent="GUI/PlayerButtons/X/Y/MENU"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -23.5
offset_right = 48.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
text = "MENU"
label_settings = ExtResource("18_y0lqw")

[node name="ButtonSFX" type="AudioStreamPlayer" parent="GUI/PlayerButtons/X/Y"]
unique_name_in_owner = true
script = ExtResource("22_si2mt")
sfx_bank = Array[AudioStream]([ExtResource("23_sp30j"), ExtResource("24_7tmle"), ExtResource("25_ya33n"), ExtResource("26_3wiol")])

[node name="MenuScreen" type="PanelContainer" parent="GUI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("31_vhc7d")

[node name="BackgroundColor" type="ColorRect" parent="GUI/MenuScreen"]
z_index = -1
layout_mode = 2
color = Color(0.33, 0.55, 0.447333, 0.784314)

[node name="BackButton" type="Button" parent="GUI/MenuScreen/BackgroundColor"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 144.0
offset_top = 88.0
offset_right = 244.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = ExtResource("32_bqoel")
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
icon = ExtResource("30_8quq7")
flat = true
expand_icon = true

[node name="Label" type="Label" parent="GUI/MenuScreen/BackgroundColor/BackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -15.5
offset_right = 28.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "BACK"
label_settings = ExtResource("8_iylel")

[node name="PauseButton" type="Button" parent="GUI/MenuScreen/BackgroundColor"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -25.5
offset_right = 50.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = ExtResource("32_bqoel")
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
icon = ExtResource("30_8quq7")
flat = true
expand_icon = true

[node name="Label" type="Label" parent="GUI/MenuScreen/BackgroundColor/PauseButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -15.5
offset_right = 28.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "PAUSE"
label_settings = ExtResource("8_iylel")

[node name="SoundButton" type="Button" parent="GUI/MenuScreen/BackgroundColor"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -24.0
offset_right = -124.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 4.23
theme = ExtResource("32_bqoel")
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
icon = ExtResource("30_8quq7")
flat = true
expand_icon = true

[node name="Label" type="Label" parent="GUI/MenuScreen/BackgroundColor/SoundButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.347
anchor_top = 0.5
anchor_right = 1.347
anchor_bottom = 0.5
offset_left = -121.7
offset_top = -15.5
offset_right = -47.7
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "SOUND"
label_settings = ExtResource("8_iylel")

[node name="SaveButton" type="Button" parent="GUI/MenuScreen/BackgroundColor"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 127.0
offset_top = -24.0
offset_right = 227.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 4.23
theme = ExtResource("32_bqoel")
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
icon = ExtResource("30_8quq7")
flat = true
expand_icon = true

[node name="Label" type="Label" parent="GUI/MenuScreen/BackgroundColor/SaveButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.529
offset_left = -28.0
offset_top = -15.5
offset_right = 46.0
offset_bottom = 19.021
grow_horizontal = 2
grow_vertical = 2
text = "SAVE"
label_settings = ExtResource("8_iylel")

[node name="CookieCount" type="Label" parent="GUI/MenuScreen/BackgroundColor"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_right = 87.0
offset_bottom = 39.0
grow_horizontal = 2
text = "Cookie Count:"
label_settings = SubResource("LabelSettings_qfgnl")

[node name="Count" type="Label" parent="GUI/MenuScreen/BackgroundColor/CookieCount"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 8.0
offset_top = 4.0
offset_right = 25.0
offset_bottom = 48.0
grow_horizontal = 0
text = "0"
label_settings = ExtResource("8_iylel")
script = ExtResource("34_kghrr")

[node name="SoundMenu" type="CanvasLayer" parent="GUI/MenuScreen"]
layer = 10
visible = false
script = ExtResource("33_id12a")

[node name="BackgroundColor2" type="TextureRect" parent="GUI/MenuScreen/SoundMenu"]
material = SubResource("CanvasItemMaterial_umu00")
anchors_preset = -1
anchor_left = 0.104
anchor_top = 0.134
anchor_right = 0.914
anchor_bottom = 0.766
offset_left = -1.248
offset_top = 8.968
offset_right = -0.968018
offset_bottom = 15.832
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("28_clqk1")

[node name="Volume" type="HSlider" parent="GUI/MenuScreen/SoundMenu/BackgroundColor2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -107.0
offset_right = -40.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
theme = ExtResource("11_ek5vw")
min_value = -20.0
max_value = 15.0
tick_count = 1
ticks_on_borders = true

[node name="Label" type="Label" parent="GUI/MenuScreen/SoundMenu/BackgroundColor2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_right = 43.0
offset_bottom = 36.0
grow_horizontal = 2
theme = ExtResource("11_ek5vw")
text = "Volume"
label_settings = ExtResource("8_iylel")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="GUI/MenuScreen/SoundMenu/BackgroundColor2"]
layout_mode = 0
offset_left = 303.0
offset_top = 237.0
offset_right = 414.0
offset_bottom = 290.0
theme = ExtResource("32_bqoel")
theme_override_font_sizes/font_size = 25
icon = ExtResource("30_8quq7")
flat = true
expand_icon = true

[node name="Label" type="Label" parent="GUI/MenuScreen/SoundMenu/BackgroundColor2/Back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -15.5
offset_right = 46.5
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
text = "BACK"
label_settings = ExtResource("8_iylel")

[node name="GuiSfx" type="AudioStreamPlayer" parent="GUI"]
script = ExtResource("34_rs42p")

[node name="PlayerMessage" type="Control" parent="GUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("36_qfgnl")

[node name="PC" type="PanelContainer" parent="GUI/PlayerMessage"]
unique_name_in_owner = true
self_modulate = Color(0.835294, 0.513726, 0.32549, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="GUI/PlayerMessage/PC"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Test"
label_settings = ExtResource("8_iylel")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Timer" type="Timer" parent="GUI/PlayerMessage"]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="PetButton" type="Button" parent="GUI"]
unique_name_in_owner = true
offset_left = 208.0
offset_top = 256.0
offset_right = 308.0
offset_bottom = 356.0
icon = SubResource("ImageTexture_mvmce")
flat = true
script = ExtResource("39_mvmce")

[node name="BGM" parent="." instance=ExtResource("35_5qxgh")]

[connection signal="finished" from="MainDisplayLayer/MainDisplayContainer/WorldManager/SFX" to="MainDisplayLayer/MainDisplayContainer/WorldManager" method="_on_sfx_finished"]
[connection signal="pressed" from="GUI/PlayerButtons/X/Y/FEED" to="MainDisplayLayer/MainDisplayContainer/WorldManager" method="_on_feed_pressed"]
[connection signal="pressed" from="GUI/PlayerButtons/X/Y/FEED" to="GUI/PlayerButtons/X/Y/FEED" method="_on_pressed"]
[connection signal="pressed" from="GUI/PlayerButtons/X/Y/CLEAN" to="GUI/PlayerButtons/X/Y/CLEAN" method="_on_pressed"]
[connection signal="pressed" from="GUI/PlayerButtons/X/Y/PLAY" to="GUI/PlayerButtons/X/Y/PLAY" method="_on_pressed"]
[connection signal="pressed" from="GUI/PlayerButtons/X/Y/MENU" to="GUI" method="_on_menu_pressed"]
[connection signal="pressed" from="GUI/PlayerButtons/X/Y/MENU" to="GUI/PlayerButtons/X/Y/MENU" method="_on_pressed"]
[connection signal="pressed" from="GUI/MenuScreen/SoundMenu/BackgroundColor2/Back" to="GUI/MenuScreen/SoundMenu" method="_on_back_pressed"]
